--- a/Buying List/Buying List/Base.lproj/Main.storyboard
+++ b/Buying List/Buying List/Base.lproj/Main.storyboard
@@ -30,13 +30,13 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Aod-qp-hd3">
-                                                    <rect key="frame" x="16" y="11" width="148" height="22"/>
+                                                    <rect key="frame" x="20" y="11" width="234" height="22"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="right" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="APQ-BZ-diw">
-                                                    <rect key="frame" x="234" y="11" width="70" height="22"/>
+                                                    <rect key="frame" x="324" y="11" width="70" height="22"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="70" id="MjV-Lf-Cmh"/>
                                                     </constraints>
@@ -45,7 +45,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cnt" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PAi-mf-27R">
-                                                    <rect key="frame" x="194" y="11" width="30" height="22"/>
+                                                    <rect key="frame" x="284" y="11" width="30" height="22"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="30" id="25O-xP-8O4"/>
                                                     </constraints>
@@ -91,6 +91,11 @@
                                 <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button hidden="YES" opaque="NO" alpha="0.0" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZU6-S8-mtv">
+                                <rect key="frame" x="197" y="826" width="70" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="accessory"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <constraints>
@@ -119,7 +124,11 @@
                                     <action selector="addCell:" destination="BYZ-38-t0r" id="lF3-7o-4p8"/>
                                 </connections>
                             </barButtonItem>
-                            <barButtonItem systemItem="edit" id="499-Y4-Prj"/>
+                            <barButtonItem systemItem="edit" id="499-Y4-Prj">
+                                <connections>
+                                    <action selector="editTable:" destination="BYZ-38-t0r" id="i9v-e8-LbW"/>
+                                </connections>
+                            </barButtonItem>
                         </rightBarButtonItems>
                     </navigationItem>
                     <connections>
@@ -131,10 +140,24 @@
             </objects>
             <point key="canvasLocation" x="963.75" y="-681.33802816901414"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="vo8-dv-dbv">
+            <objects>
+                <viewController id="HKM-GF-Q8M" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="m5w-fz-tqh">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="mYO-34-JjY"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gTB-Bd-DGe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1736" y="-682"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="ZPv-nH-mg1">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="u04-uz-0Es" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="nXn-rD-maD" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="q6Q-sN-8cy">
@@ -146,6 +169,7 @@
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="c9J-dF-Sm1"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="u04-uz-0Es" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="180" y="-681.33802816901414"/>
         </scene>
